Fixed vertical alignment of image rows in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ ol {
     padding: 1rem;
     display: inline-block;
     margin-bottom: 0.75rem;
+    vertical-align: top;
 }
 
 #results li img {
